+ game board 🏂 + game square ⬛⬜

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.square {
+  border: 1em solid black;
+  width: 2em;
+  height: 2em;
+}
