+player icon 🤵 + turn arrows ➡

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14435,6 +14435,18 @@ video {
   background-color: black;
 }
 
+.player {
+  color: white;
+}
+
+.notPlayer{
+  color: dimgrey;
+}
+
+.filter-invert{
+  filter: invert();
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
