--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -71,3 +71,12 @@
     height: 1.5rem;
     background-color: black;
 }
+.player {
+    color: white;
+}
+.notPlayer{
+    color: dimgrey;
+}
+.filter-invert{
+    filter: invert();
+}
