--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -6,6 +6,9 @@
 *,*::after,*::before {
     box-sizing: border-box;
 }
+.App {
+    text-align: center;
+}
 .cell:first-child{
     border-right: 2px solid white;
     border-bottom: 2px solid white;
@@ -80,3 +83,35 @@
 .filter-invert{
     filter: invert();
 }
+.share:hover {
+    cursor: pointer;
+}
+@media (min-width: 768px) {
+    .md\:h-100 {
+        height: 30rem;
+    }
+
+    .md\:w-100 {
+        width: 30rem;
+    }
+    .xCell::before,
+    .xCell::after {
+        content: '';
+        position: absolute;
+        width: 1.4rem;
+        height: 6rem;
+        background-color: white;
+        margin: auto;
+    }
+    .circle::before{
+        width: 6rem;
+        height: 6rem;
+        background-color: white;
+    }
+    .circle::after {
+        width: 2.75rem;
+        height: 2.75rem;
+        background-color: black;
+    }
+}
+
